--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="3.1">
     <!-- 欢迎页面 -->
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>jsp/index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
